src/test/resources/typeSystemTestModels/invalid/statements/WhileConditionHasBooleanType.java
package typeSystemTestModels.invalid.statements;

public class WhileConditionHasBooleanType {
  public void test(){
    while (1) {

    }
  }
}
